--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,24 @@
+/*Cursor related*/
+body {
+  height: 100vh;
+  cursor: none;
+  background: #fff;
+  color: #212021;
+}
+body .cursor {
+  pointer-events: none;
+}
+body .cursor__ball {
+  /* position: fixed; */
+  top: 0;
+  left: 0;
+  mix-blend-mode: difference;
+  z-index: 1000;
+}
+body .cursor__ball circle {
+  fill: #f7f8fa;
+}
+
 /* latin-ext */
 @font-face {
   font-family: 'Lato';
